# biodiversity-impacts

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  env.yaml  requirements.txt  setup.cfg  setup_conda_path.bat  setup_conda_path.sh
core/dags/: dag_setup.py  dags.py
core/data/: data_configs.yaml  data_processing.py  land_use_fraction_task.py  predicts.py  predicts_processing.py  predicts_task.py  raster_stats_task.py  road_density_task.py  site_buffering_task.py
core/features/: abundance_task.py  alpha_diversity_task.py  beta_diversity_task.py  combine_data_task.py  feature_configs.yaml  feature_engineering.py  generate_features_task.py
core/model/: base_model_class.py  bhm_model.py  crossval_task.py  glmm_model.py  hierarchical_model.py  hierarchical_models.py  linear_mixed_model.py  model_archive.py  model_configs.yaml  model_data_task.py  model_eval.py  model_functions.py  model_train_task.py  model_utils.py  models.py  pymc_models.py  training_crossval_task.py
core/utils/: bayesian_utils.py  general_utils.py  (+3 more)
experiments/: run_experiment.py
notebooks/: 1_inspect_output_files.ipynb  1_manuscript_main.ipynb  1_manuscript_module.py  2_extended_data.ipynb  4_bayesian_model_eval.ipynb  4_bayesian_model_eval_v2.ipynb  6_lmm_model_eval.ipynb  7_model_comp.ipynb  8_key_outputs.ipynb  distribution_playground.ipynb  geodata_processing.ipynb  geodata_processing_v2.ipynb  improved_models.ipynb  inspect_output_files.ipynb  lme_benchmark.ipynb  model_data_analysis.ipynb  model_pipeline.ipynb  predicts_data_exploration.ipynb  predicts_processing.ipynb
(+36 files in other folders)
