[options]
python_requires = >=3.11, <3.12

[flake8]
max-line-length = 88

[isort]
profile = black

[mypy]
python_version = 3.11
strict_optional = True  # Handling of None and optional types
ignore_missing_imports = True  # Avoid errors for missing type stubs in external libraries
disallow_untyped_defs = False  # Allow functions without type annotations
disallow_incomplete_defs = False  # Allow incomplete type annotations
check_untyped_defs = True  # Type check the body of functions without type annotations

# Warn about these issues
warn_unreachable = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_unused_configs = True
