[options]
python_requires = >=3.11, <3.12

[flake8]
max-line-length = 88
ignore =
    D100,
    D205,
    D400
# D100 Missing docstring in public module
# D400 First line should end with a period
# D205  1 blank line required between summary line and description

[isort]
profile = black

[mypy]
python_version = 3.11
# Untyped definitions and calls
ignore_missing_imports = True
disallow_untyped_defs = False
disallow_incomplete_defs = False
check_untyped_defs = True
disallow_untyped_calls = False
# None and Optional handling
strict_optional = True
# Warnings
warn_unreachable = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_unused_configs = True
